[package]
name = "raes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# base
ron = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "sync", "time", "macros"] }
anyhow = "1.0"
thiserror = "1"

# asset
notify = "6.0.1"

# surface
raw-window-handle = "0.5"
winit = { version = "0.28", default-features = false, features = ["wayland-dlopen", "x11", "wayland"] }

# sprite2d
cgmath = "0.18.0"
